Navbar and Menu cart correction

--- a/index.html
+++ b/index.html
@@ -87,35 +87,80 @@
                 <div class="for_navbar_bg_inner">
                     <div class="first_loop owl-carousel owl-theme">
                         <div class="item_main_one">
-                            <div class="item_inner_one"></div>
+                            <div class="item_inner_one">
+                                <!--!For Navbar Menu and Content Starts-->
+                                <div class="navbar_menu_content_wrap">
+                                    <div class="navbar_menu_main flex justify-end">
+                                        <div class="navbar_menu_inner flex flex-row justify-end gap-5">
+                                            <div class="flex justify-center items-center active">
+                                                <a href="#">Home</a>
+                                            </div>
+                                            <div class="flex justify-center items-center">
+                                                <a href="#">Specials</a>
+                                            </div>
+                                            <div class="flex justify-center items-center">
+                                                <a href="#">About</a>
+                                            </div>
+                                            <div class="flex justify-center items-center">
+                                                <a href="#">Menu Cart</a>
+                                            </div>
+                                            <div class="flex justify-center items-center">
+                                                <a href="#">Contact</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="navbar_content_main flex justify-end">
+                                        <div class="navbar_content_inner flex flex-col items-center">
+                                            <div class="for_content text-center">
+                                                <p>Dandelion cucumber earthnut<br> pea peanut soko zucchini</p>
+                                            </div>
+                                            <div class="for_divider">
+                                                <img src="dist/img/divider.svg" alt="">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--!For Navbar Menu and Content Ends-->
+                            </div>
                         </div>
                         <div class="item_main_two">
-                            <div class="item_inner_two"></div>
-                        </div>
-                    </div>
-                    <!--!For Navbar Menu and Content Starts-->
-                    <div class="navbar_menu_content_wrap">
-                        <div class="navbar_menu_main">
-                            <div class="navbar_menu_inner flex flex-row gap-12">
-                                <a class="active" href="#">Home</a>
-                                <a href="#">Specials</a>
-                                <a href="#">About</a>
-                                <a href="#">Menu Cart</a>
-                                <a href="#">Contact</a>
+                            <div class="item_inner_two">
+                                <!--!For Navbar Menu and Content Starts-->
+                                <div class="navbar_menu_content_wrap">
+                                    <div class="navbar_menu_main flex justify-end">
+                                        <div class="navbar_menu_inner flex flex-row justify-end gap-5">
+                                            <div class="flex justify-center items-center active">
+                                                <a href="#">Home</a>
+                                            </div>
+                                            <div class="flex justify-center items-center">
+                                                <a href="#">Specials</a>
+                                            </div>
+                                            <div class="flex justify-center items-center">
+                                                <a href="#">About</a>
+                                            </div>
+                                            <div class="flex justify-center items-center">
+                                                <a href="#">Menu Cart</a>
+                                            </div>
+                                            <div class="flex justify-center items-center">
+                                                <a href="#">Contact</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="navbar_content_main flex justify-end">
+                                        <div class="navbar_content_inner flex flex-col items-center">
+                                            <div class="for_content text-center">
+                                                <p>Dandelion cucumber earthnut<br> pea peanut soko zucchini</p>
+                                            </div>
+                                            <div class="for_divider">
+                                                <img src="dist/img/divider.svg" alt="">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--!For Navbar Menu and Content Ends-->
                             </div>
                         </div>
-                        <div class="navbar_content_main">
-                            <div class="navbar_content_inner">
-                                <div class="for_content text-center">
-                                    <p>Dandelion cucumber earthnut<br> pea peanut soko zucchini</p>
-                                </div>
-                                <div class="for_divider flex justify-center">
-                                    <img src="dist/img/divider.svg" alt="">
-                                </div>
-                            </div>
-                        </div>
                     </div>
-                    <!--!For Navbar Menu and Content Ends-->
                 </div>
             </div>
         </div>
