--- a/index.html
+++ b/index.html
@@ -557,6 +557,79 @@
         </div>
     </section>
     <!--*Menu Cart Section Ends-->
+    <!--*Contact Section Starts-->
+    <section class="contact_main">
+        <div class="contact_inner flex">
+            <div class="test_cus"></div>
+            <div class="contact_wrap_main">
+                <div class="contact_wrap_inner flex flex-col items-center gap-16 mt-10">
+                    <div class="contact_header_cus flex flex-col items-center">
+                        <div class="for_header">
+                            <p>Contact</p>
+                        </div>
+                        <div class="for_divider">
+                            <img src="dist/img/divider.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="veggie_reservations_wrap flex flex-row justify-between">
+                        <div class="veggie_main">
+                            <div class="for_header">
+                                <p>VEGGIE</p>
+                            </div>
+                            <div class="for_txt">
+                                <p>3428 Magnolia Avenue</p>
+                                <p>Hackettstown, NJ 07840</p>
+                            </div>
+                        </div>
+                        <div class="reservations_main">
+                            <div class="for_header flex justify-end">
+                                <p>RESERVATIONS</p>
+                            </div>
+                            <div class="for_txt flex flex-col items-end">
+                                <p>reservations@veggie.com</p>
+                                <p>+48 202-555-0114</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contact_form flex flex-col gap-12">
+                        <div class="for_heading">
+                            <p>CONTACT US</p>
+                        </div>
+                        <div class="form_cus">
+                            <form class=" flex flex-col gap-12" action="">
+                                <div class="name_mail_wrap flex flex-row gap-7">
+                                    <div class="for_name">
+                                        <input type="text" placeholder="Name">
+                                    </div>
+                                    <div class="for_mail">
+                                        <input type="email" placeholder="Email">
+                                    </div>
+                                </div>
+                                <div class="for_message">
+                                    <input type="text" placeholder="Message">
+                                </div>
+                                <div class="btn_cus flex justify-center">
+                                    <button>Send</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="social_main flex flex-row justify-end gap-5">
+                        <div>
+                            <img src="dist/img/icon-fb.svg" alt="">
+                        </div>
+                        <div>
+                            <img src="dist/img/icon-insta.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyright_main flex justify-center">
+            <p>Copyright 2024 <span class="icon_cus"><i class="fa-regular fa-copyright"></i></span> by <span class="name_cus">On_Sumaiya</span></p>
+        </div>
+    </section>
+    <!--*Contact Section Ends-->
 
 
 
